--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "jsx": "react-jsx",
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "esModuleInterop": true
   }
 }
